--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -13,6 +13,8 @@
 
 .footer-column__title {}
 
-.footer-column__list {}
+.footer-column__list {
+    list-style: none;
+}
 
 .footer-column__item {}
