--- a/src/scss/components/categories.scss
+++ b/src/scss/components/categories.scss
@@ -4,6 +4,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
     gap: 10px;
+    list-style: none;
 
     @media (min-width: $tablet) {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
