--- a/src/scss/components/product.scss
+++ b/src/scss/components/product.scss
@@ -1,9 +1,38 @@
 .product__body {
     margin-top: 20px;
+    display: grid;
+
+    @media (min-width: $laptop) {
+        grid-template-columns: max-content 1fr;
+        grid-template-rows: max-content 1fr 1fr max-content;
+        gap: 15px;
+    }
 }
 
 .gallery {
+    grid-row: span 3;
     margin-bottom: 15px;
+    margin: 0 auto;
+
+    @media (min-width: $mobileB) {
+        max-width: 400px;
+    }
+
+    @media (min-width: $tablet) {
+        max-width: 450px;
+    }
+
+    @media (min-width: $laptop) {
+        margin: 0;
+        max-width: 500px;
+        padding: 15px;
+        border: 1px solid $greyColor;
+        border-radius: 10px;
+    }
+
+    @media (min-width: 1200px) {
+        max-width: 600px;
+    }
 }
 
 .gallery__slider {
@@ -12,7 +41,12 @@
 
 .gallery__wrapper {}
 
-.gallery__slide {}
+.gallery__slide,
+.thumbs__slide {
+    &:hover {
+        cursor: pointer;
+    }
+}
 
 .thumbs__slider {
     max-width: 90%;
@@ -33,9 +67,13 @@
     }
 }
 
-.thumbs__slide {}
-
-.product__text {}
+.product__text {
+    @media (min-width: $laptop) {
+        padding: 15px;
+        border: 1px solid $greyColor;
+        border-radius: 10px;
+    }
+}
 
 .product__title {
     margin-bottom: 10px;
@@ -50,7 +88,11 @@
     background-color: $greenColor;
 }
 
-.product__link {}
+.product__link {
+    &:hover {
+        text-decoration: underline;
+    }
+}
 
 .product__row {
     display: flex;
@@ -65,19 +107,29 @@
     font-size: 14px;
     color: $redColor;
     text-decoration: line-through solid $redColor;
+    margin-bottom: 0;
 
-    @media (min-width: $laptop) {
+    @media (min-width: $mobileB) {
         font-size: 16px;
         margin-bottom: 3px;
+    }
+
+    @media (min-width: $laptop) {
+        font-size: 20px;
     }
 }
 
 .product__actual-price {
-    font-size: 18px;
+    margin-bottom: 0;
+    font-size: 20px;
     font-weight: 500;
 
+    @media (min-width: $mobileB) {
+        font-size: 22px;
+    }
+
     @media (min-width: $laptop) {
-        font-size: 20px;
+        font-size: 30px;
     }
 }
 
@@ -86,15 +138,37 @@
     font-weight: 500;
     padding: 5px 20px;
     border-radius: 5px;
+
+    @media (min-width: $laptop) {
+        font-size: 20px;
+        padding: 8px 24px;
+    }
 }
 
-.product-add-info {}
+.product-add-info {
+    margin-bottom: 15px;
+    order: 4;
+
+    @media (min-width: $laptop) {
+        grid-row: span 2;
+        order: 3;
+        padding: 15px;
+        margin-bottom: 0;
+        border: 1px solid $greyColor;
+        border-radius: 10px;
+    }
+}
 
 .product-add-info__navigation {
     margin-bottom: 10px;
+
+    @media (min-width: $laptop) {
+        margin-bottom: 15px;
+    }
 }
 
-.product-add-info__title {
+.product-add-info__title,
+.product-details__title {
     position: relative;
     font-size: 18px;
     font-weight: 500;
@@ -114,8 +188,51 @@
         width: 100%;
         height: 1.5px;
     }
+
+    @media (min-width: $laptop) {
+        font-size: 22px;
+
+        &:not(:last-child) {
+            margin-right: 15px;
+        }
+
+        &._tab-active::after {
+            content: '';
+            display: block;
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            background: $yellowColor;
+            width: 100%;
+            height: 2px;
+        }
+    }
 }
 
 .product-add-info__content {}
 
 .product-add-info__body {}
+
+.product-details {
+    margin-bottom: 15px;
+
+    @media (min-width: $laptop) {
+        order: 4;
+        grid-column: span 2;
+        padding: 15px;
+        border: 1px solid $greyColor;
+        border-radius: 10px;
+    }
+}
+
+.product-details__navigation {
+    margin-bottom: 10px;
+
+    @media (min-width: $laptop) {
+        margin-bottom: 15px;
+    }
+}
+
+.product-details__content {}
+
+.product-details__body {}
