--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -28,7 +28,11 @@ textarea {
     }
 }
 
-.title-first {
+//========================================================================================================================================================
+
+//titles
+.title-first,
+h1 {
     font-size: 30px;
     font-weight: 700;
 
@@ -37,7 +41,8 @@ textarea {
     }
 }
 
-.title-second {
+.title-second,
+h2 {
     font-size: 25px;
     font-weight: 500;
 
@@ -45,6 +50,18 @@ textarea {
         font-size: 32px;
     }
 }
+
+.title-third,
+h3 {
+    font-size: 20px;
+    font-weight: 500;
+
+    @media (min-width: $tablet) {
+        font-size: 25px;
+    }
+}
+
+//========================================================================================================================================================
 
 //form
 .form {
@@ -113,9 +130,14 @@ textarea {
     }
 }
 
+//========================================================================================================================================================
+
+
+//breadcrumbs
 .breadcrumbs {
     display: flex;
     margin-bottom: 10px;
+    list-style: none;
 }
 
 .breadrrumbs__item {
@@ -136,6 +158,9 @@ textarea {
     }
 }
 
+//========================================================================================================================================================
+
+//special class
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -147,4 +172,36 @@ textarea {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+//========================================================================================================================================================
+
+//table
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+tr {
+    &:nth-child(2n) {
+        background: $greyColor;
+    }
+}
+
+td,
+th {
+    text-align: left;
+    padding: 10px 5px;
+    border: 1px solid $blackColor;
+
+    @media (min-width: $laptop) {
+        font-size: 18px;
+        padding: 15px 10px;
+    }
+}
+
+//========================================================================================================================================================
+
+p {
+    margin-bottom: 10px;
 }
