--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -25,12 +25,14 @@
     background: $whiteColor;
     height: max-content;
     width: 100%;
+    min-height: 100%;
 
     @media (min-width: $laptop) {
         max-width: 840px;
         padding: 15px;
         border-radius: 10px;
         margin: 30px 0;
+        min-height: auto;
     }
 }
 
@@ -47,6 +49,6 @@
     }
 }
 
-.popup__close {
+.button-close {
     background: transparent;
 }
