--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -56,6 +56,7 @@
 @import 'components/pagging';
 @import 'components/contacts';
 @import 'components/product';
+@import 'components/gallery-popup';
 //@import 'components/tabs';
 //@import 'components/accordion';
 @import 'components/footer';
