--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,20 +1,79 @@
 .footer {
-    display: none;
     background: $blueColor;
 }
 
 .footer__body {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    justify-items: center;
+    padding: 15px 0;
+
+    @media (min-width: $mobileB) {
+        padding: 25px 0;
+    }
+
+    @media (min-width: $tablet) {
+        display: flex;
+    }
 }
 
-.footer-column {}
+.footer-column {
 
-.footer-column__title {}
+    //margin-right: 150px;
+    &:not(:last-child) {
+        margin-bottom: 10px;
+    }
+
+    @media (min-width: $tablet) {
+        margin-right: 40px;
+
+        &.footer-column_last {
+            order: 4;
+        }
+    }
+
+    @media (min-width: $laptop) {
+        margin-right: 100px;
+    }
+
+    @media (min-width: 1200px) {
+        margin-right: 150px;
+    }
+}
+
+.footer__logo {
+    //test
+    width: 100px;
+    height: 50px;
+    margin: 0 auto;
+}
+
+.footer-column__title {
+    color: $greenColor;
+    margin-bottom: 8px;
+}
 
 .footer-column__list {
     list-style: none;
 }
 
-.footer-column__item {}
+.footer-column__item {
+    color: $whiteColor;
+    padding: 4px 0px 4px 10px;
+    transition: 0.2s;
+
+    @media (any-hover: hover) {
+        &:hover {
+            color: $yellowColor;
+            transition: 0.2s;
+        }
+    }
+
+    svg {
+        transition: 0.2s;
+
+        @media (any-hover: hover) {
+            &:hover {
+                fill: $yellowColor;
+                transition: 0.2s;
+            }
+        }
+    }
+}
