The form for reviews page is ready. Gray color has become more contrasting.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,6 +57,7 @@
 @import 'components/contacts';
 @import 'components/product';
 @import 'components/gallery-popup';
+@import 'components/reviews';
 //@import 'components/tabs';
 //@import 'components/accordion';
 @import 'components/footer';
