--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -17,7 +17,8 @@ $blackColor: #000;
 $yellowColor: #FF9000;
 $blueColor: #2C5E98;
 $greenColor: #AABE4E;
-$greyColor: #ADB5BD;
+$greyColor: #8D949B;
+//$greyColor: #ADB5BD;
 $redColor: #BC4749;
 
 $fontFamily: $mainFont, sans-serif; // Семейство шрифта по умолчанию
