--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -44,6 +44,7 @@ img {
   position: relative;
   flex: 1 1 auto;
   margin-top: 120px;
+  margin-bottom: 25px;
 
   @media (min-width: $tablet) {
     margin-top: 155px;
