--- a/src/scss/components/filter.scss
+++ b/src/scss/components/filter.scss
@@ -75,11 +75,17 @@
 }
 
 .filter-applied-item__title {
-    padding: 8px;
+    font-size: 16px;
+    padding: 6px;
     color: $whiteColor;
     border: 1px solid $whiteColor;
     border-radius: 5px;
     margin-bottom: 8px;
+
+    @media (min-width: $tablet) {
+        font-size: 18px;
+        padding: 8px;
+    }
 }
 
 .filter-applied-item__option {
@@ -96,7 +102,7 @@
         width: 100%;
         font-size: 16px;
         text-align: left;
-        padding: 8px;
+        padding: 6px;
         border-radius: 5px;
 
         &::after {
@@ -109,6 +115,7 @@
 
         @media (min-width: $tablet) {
             font-size: 18px;
+            padding: 8px;
         }
     }
 }
@@ -292,7 +299,7 @@
         width: 15px;
         height: 15px;
         position: absolute;
-        top: 0;
+        top: 3px;
         left: 0;
         background: $whiteColor;
         border-radius: 3px;
