--- a/src/scss/components/categories.scss
+++ b/src/scss/components/categories.scss
@@ -3,6 +3,7 @@
 .categories__list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    justify-content: center;
     gap: 10px;
     list-style: none;
 
