--- a/src/scss/components/product-card.scss
+++ b/src/scss/components/product-card.scss
@@ -1,4 +1,5 @@
 .product-card {
+    max-width: 350px;
     height: initial;
     display: flex;
     flex-direction: column;
@@ -8,6 +9,7 @@
 
     @media (min-width: $laptop) {
         padding: 20px;
+        max-width: 400px;
     }
 }
 
@@ -60,6 +62,7 @@
     font-size: 14px;
     color: $redColor;
     text-decoration: line-through solid $redColor;
+    margin-bottom: 0;
 
     @media (min-width: $laptop) {
         font-size: 16px;
@@ -69,6 +72,7 @@
 
 .product-card__actual-price {
     font-size: 18px;
+    margin-bottom: 0;
 
     @media (min-width: $laptop) {
         font-size: 20px;
