--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -1,4 +1,4 @@
-.contacts {
+.contacts__body {
     margin-top: 16px;
 
     @media (min-width: $tablet) {
@@ -10,11 +10,13 @@
     @media (min-width: $tablet) {
         flex: 50%;
         margin-right: 10px;
+        margin-left: 5px;
     }
 
     @media (min-width: $laptop) {
         flex: 50%;
         margin-right: 20px;
+        margin-left: 10px;
     }
 }
 
@@ -33,8 +35,20 @@
 .phones__item {
     font-size: 20px;
 
+    a {
+        transition: color 0.2s;
+    }
+
+
     &:not(:last-child) {
         margin-bottom: 7px;
+    }
+
+    @media (any-hover: hover) {
+        & a:hover {
+            color: $yellowColor;
+            transition: color 0.2s;
+        }
     }
 }
 
