The phone validation was changed. New library for phone valid. was included. Fixed the bag with checkbox in the filter block.

--- a/src/scss/components/filter.scss
+++ b/src/scss/components/filter.scss
@@ -270,7 +270,7 @@
         width: 15px;
         height: 15px;
         position: absolute;
-        top: 0;
+        top: 3px;
         left: 0;
         background: url('../img/icons/icons.svg#check');
     }
