--- a/src/scss/components/new.scss
+++ b/src/scss/components/new.scss
@@ -15,8 +15,26 @@
 }
 
 .new__slider {
+    width: 340px;
+
+    @media (min-width: 550px) {
+        width: 520px;
+    }
+
+    @media (min-width: $tablet) {
+        width: 735px;
+    }
+
     @media (min-width: $laptop) {
-        max-width: calc(95% + 1px);
+        width: 1000px;
+    }
+
+    @media (min-width: 1200px) {
+        width: 1170px;
+    }
+
+    @media (min-width: 1440px) {
+        width: 1300px;
     }
 }
 
@@ -52,6 +70,7 @@
     top: 50%;
     transform: translate(-50%);
     background: transparent;
+    z-index: 1;
 
     @media (min-width: $laptop) {
         display: block;
