the header was changed. the green color was changed.

--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -16,7 +16,8 @@ $whiteColor: #fff;
 $blackColor: #000;
 $yellowColor: #FF9000;
 $blueColor: #2C5E98;
-$greenColor: #AABE4E;
+$greenColor: #76BB9D;
+//$greenColor: #AABE4E;
 $greyColor: #8D949B;
 //$greyColor: #ADB5BD;
 $redColor: #BC4749;
