--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -5,12 +5,8 @@
   left: 0;
   width: 100%;
   z-index: 2;
-  background: #76BB9D;
+  background: $greenColor;
   box-shadow: 0 2px 2px rgba(0, 0, 0, .22);
-
-  @media (min-width: $laptop) {
-    background: $whiteColor;
-  }
 }
 
 //========================================================================================================================================================
@@ -19,7 +15,7 @@
   @media (min-width: $laptop) {
     max-width: $containerWidth + px;
     margin: 0 auto;
-    padding: 10px 20px;
+    padding: 0 20px;
     display: grid;
     grid-template-columns: max-content 1fr;
     gap: 80px;
@@ -27,15 +23,19 @@
     justify-content: space-between;
   }
 
-  @media (min-width: 1460px) {
-    padding: 10px 0px;
+  @media (min-width: 1450px) {
+    padding: 0px;
   }
 }
 
 .header__logo {
-  height: 50px;
+  max-height: 50px;
   display: flex;
   justify-content: center;
+
+  @media (min-width: $tablet) {
+    max-height: 70px;
+  }
 
   @media (min-width: $laptop) {
     justify-content: start;
@@ -154,8 +154,8 @@ html.menu-open .header-menu-icon {
   font-size: 18px;
   padding: 5px;
   border-radius: 5px 0px 0px 5px;
-  border: 1px solid #FFF;
-  background: transparent;
+  border: 1px solid $whiteColor;
+  background: $whiteColor;
   color: $whiteColor;
   outline: none;
 
@@ -166,7 +166,7 @@ html.menu-open .header-menu-icon {
 
   @media (min-width: $laptop) {
     color: $blackColor;
-    border: 1px solid $greyColor;
+    border: 1px solid $whiteColor;
   }
 }
 
@@ -286,10 +286,6 @@ html.menu-open .header-menu-icon {
     fill: $whiteColor;
     transition: $standartTrans;
 
-    @media (min-width: $laptop) {
-      fill: $blackColor;
-    }
-
     @media (any-hover: hover) {
       &:hover {
         fill: $yellowColor;
@@ -320,6 +316,7 @@ html.menu-open .header-menu-icon {
 
   @media (min-width: $laptop) {
     padding: 0;
+    border-bottom: none;
 
     &:not(:last-child) {
       margin-bottom: 5px;
@@ -327,7 +324,6 @@ html.menu-open .header-menu-icon {
 
     a {
       font-weight: 500;
-      color: $blackColor;
       transition: $standartTrans;
     }
   }
@@ -396,6 +392,7 @@ html.menu-open .header-menu-icon {
     height: 22px;
     top: -10px;
     right: -10px;
+    background: $blueColor;
   }
 }
 
