--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -12,12 +12,14 @@
     pointer-events: none;
     transition: $standartTrans;
     overflow-y: hidden;
+    visibility: hidden;
 
     &.is-open {
         opacity: 1;
         pointer-events: auto;
         transition: $standartTrans;
         overflow-y: auto;
+        visibility: visible;
     }
 }
 
@@ -26,13 +28,14 @@
     height: max-content;
     width: 100%;
     min-height: 100%;
+    padding: 0 15px;
 
     @media (min-width: $laptop) {
         max-width: 840px;
-        padding: 15px;
         border-radius: 10px;
         margin: 30px 0;
         min-height: auto;
+        padding: 5px 20px;
     }
 }
 
