--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -110,7 +110,7 @@ h3 {
     font-size: 20px;
     font-weight: 500;
     border-radius: 8px;
-    padding: 8px;
+    padding: 8px 15px;
     margin-bottom: 16px;
 
     &:active {
@@ -118,7 +118,7 @@ h3 {
     }
 
     @media (min-width: $tablet) {
-        max-width: 200px;
+        max-width: max-content;
     }
 }
 
