--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -69,7 +69,7 @@ h3 {
 }
 
 @media (min-width: $laptop) {
-    .form__input-label._half-row {
+    .form__block._half-row {
         flex-basis: 48%;
         flex-grow: 0;
     }
