Fixed bug with catalog opening

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -401,7 +401,7 @@ html.menu-open .header-menu-icon {
 
   @media (min-width: $laptop) {
     height: auto;
-    overflow-y: auto;
+    overflow-y: visible;
   }
 }
 
