--- a/src/scss/components/reviews.scss
+++ b/src/scss/components/reviews.scss
@@ -55,7 +55,7 @@
 .rating__label::before {
     content: "★";
     display: block;
-    transition: $standartTrans;
+    transition: $standardTrans;
 }
 
 .rating__label:hover,
