--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -24,7 +24,7 @@ $fontColor: $blackColor;
 $fontSize: 16;
 $fontWeight: $mainWeight;
 
-$standartTrans: all 0.4s ease 0ms;
+$standardTrans: all 0.4s ease 0ms;
 
 $btnBoxShadow: 0px 2px 3px rgba(#000, 10%), 0px 8px 3px rgba(#000, 10%);
 
