--- a/src/scss/components/catalog.scss
+++ b/src/scss/components/catalog.scss
@@ -51,7 +51,7 @@
 
 .select_open .select__title::after {
     transform: rotate(0deg);
-    transition: $standartTrans;
+    transition: $standardTrans;
 }
 
 .select__title {
@@ -66,7 +66,7 @@
         height: 20px;
         background: url('../img/icons/icons.svg#select-arrow');
         transform: rotate(-90deg);
-        transition: $standartTrans;
+        transition: $standardTrans;
     }
 }
 
