--- a/src/scss/components/categories.scss
+++ b/src/scss/components/categories.scss
@@ -18,23 +18,23 @@
 .categories-item {
     border: 1px solid $greyColor;
     border-radius: 10px;
-    transition: $standartTrans;
+    transition: $standardTrans;
 
     &:active {
         transform: scale(0.9);
-        transition: $standartTrans;
+        transition: $standardTrans;
     }
 
     @media (any-hover: hover) {
         &:hover {
             .categories-item__img {
                 transform: scale(0.8);
-                transition: $standartTrans;
+                transition: $standardTrans;
             }
 
             .categories-item__title {
                 color: $yellowColor;
-                transition: $standartTrans;
+                transition: $standardTrans;
             }
         }
     }
@@ -53,7 +53,7 @@
 
 .categories-item__img {
     margin-bottom: 10px;
-    transition: $standartTrans;
+    transition: $standardTrans;
 
     @media (min-width: $laptop) {
         margin-bottom: 15px;
@@ -64,5 +64,5 @@
     font-size: 20px;
     font-weight: 500;
     text-align: center;
-    transition: $standartTrans;
+    transition: $standardTrans;
 }
