--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -10,14 +10,14 @@
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 0;
     pointer-events: none;
-    transition: $standartTrans;
+    transition: $standardTrans;
     overflow-y: hidden;
     visibility: hidden;
 
     &.is-open {
         opacity: 1;
         pointer-events: auto;
-        transition: $standartTrans;
+        transition: $standardTrans;
         overflow-y: auto;
         visibility: visible;
     }
