--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -1,3 +1,40 @@
+// for all containers
+[class*='__container'] {
+    max-width: ($containerWidth + $mainOffset * 2);
+    margin: 0 auto;
+    padding: 0 ($mainOffset);
+
+    @media (min-width: $mobileB) {
+        padding: 0 $mainOffsetMobileB;
+    }
+}
+
+// Responsive images ============================================
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    min-width: 360px;
+    overflow-x: hidden;
+}
+
+.page {
+    position: relative;
+    flex: 1 1 auto;
+    margin-top: 120px;
+    margin-bottom: 25px;
+
+    @media (min-width: $laptop) {
+        margin-top: 145px;
+    }
+}
+
 input,
 textarea {
     &:focus {
@@ -9,13 +46,13 @@ textarea {
 .button {
     font-size: 16px;
     background: $yellowColor;
-    transition: $standartTrans;
+    transition: $standardTrans;
     color: $whiteColor;
 
     @media (any-hover: hover) {
         &:hover {
             box-shadow: 0px 0px 8px 2px $yellowColor;
-            transition: $standartTrans;
+            transition: $standardTrans;
         }
     }
 }
@@ -142,6 +179,7 @@ h3 {
 
         a {
             margin-right: 5px;
+
             &:hover {
                 text-decoration: underline;
             }
@@ -152,6 +190,7 @@ h3 {
             display: block;
         }
     }
+
     .breadcrumbs__item-current {
         font-weight: 600;
     }
@@ -207,4 +246,150 @@ p {
 
 .select {
     z-index: 1;
+}
+
+.button-actions__container {
+    position: relative;
+}
+
+.button-action {
+    position: fixed;
+    right: 5px;
+    bottom: 0;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+
+    svg {
+        fill: $whiteColor;
+    }
+
+    @media (min-width: $tablet) {
+        width: 65px;
+        height: 65px;
+    }
+
+    @media (min-width: 1450px) {
+        right: 2%;
+        width: 70px;
+        height: 70px;
+    }
+}
+
+.callback__btn {
+    background: $yellowColor;
+    bottom: 10px;
+
+    svg {
+        width: 30px;
+        height: 30px;
+        z-index: 3;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        z-index: 1;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        display: block;
+        width: 55px;
+        height: 55px;
+        background: $yellowColor;
+        border-radius: 50%;
+        transition: all 200ms;
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        z-index: 0;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        display: block;
+        width: 50px;
+        height: 50px;
+        background: $yellowColor;
+        border-radius: 50%;
+        animation: pulse-border 1100ms ease-out infinite;
+    }
+
+    @media (min-width: $tablet) {
+        &::after {
+            width: 65px;
+            height: 65px;
+        }
+
+        &::before {
+            width: 55px;
+            height: 55px;
+        }
+    }
+
+    @media (min-width: 1450px) {
+        bottom: 20px;
+
+        svg {
+            width: 35px;
+            height: 35px;
+        }
+
+        &::after {
+            width: 70px;
+            height: 70px;
+        }
+
+        &::before {
+            width: 60px;
+            height: 60px;
+        }
+    }
+}
+
+@keyframes pulse-border {
+    0% {
+        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
+        opacity: 0;
+    }
+}
+
+.to-top {
+    display: none;
+    background: $greenColor;
+    bottom: 70px;
+    box-shadow: 0px 0px 8px 5px rgba($greenColor, 0.50);
+
+    svg {
+        width: 40px;
+        height: 40px;
+        transform: rotate(180deg);
+    }
+
+    @media (min-width: $tablet) {
+        bottom: 80px;
+
+        svg {
+            width: 50px;
+            height: 50px;
+        }
+    }
+
+    @media (min-width: 1450px) {
+        bottom: 100px;
+    }
+
+    &_active {
+        display: block;
+    }
 }
