--- a/src/scss/config/reset.scss
+++ b/src/scss/config/reset.scss
@@ -106,7 +106,7 @@ sup {
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none; // Yeah, yeah everybody write about it
+  -webkit-appearance: none;
 }
 
 input[type='number'],
