--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@
 @import 'components/blocks/phones';
 @import 'components/blocks/socials';
 @import 'components/blocks/cart-button';
+@import 'components/blocks/list';
 
 @import 'components/sections/header';
 @import 'components/popup';
