--- a/src/scss/components/blocks/logo.scss
+++ b/src/scss/components/blocks/logo.scss
@@ -2,6 +2,11 @@
   max-height: 50px;
   display: flex;
   justify-content: center;
+  overflow: hidden;
+
+  &_border-radius {
+    border-radius: 5px;
+  }
 
   @media (min-width: $tablet) {
     max-height: 70px;
